--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Request Header Parser Microservice</title>
+    <meta name="author" content="trucvhc">
+    <meta name="description" content="Request Header Parser - Parse HTTP headers for client info. Developed by trucvhc">
+    <title>Request Header Parser | by trucvhc</title>
     <style>
         * {
             margin: 0;
